# cpp-shell

./: CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
include/: pipeline.h
src/: builtins.cpp  builtins.h  commandExecutor.cpp  commandExecutor.h  completeRegistry.cpp  history.cpp  history.h  main.cpp  pipeline.cpp  terminal.cpp  variables.cpp  variables.h
